[package]
name = "redis-routing"
version = "0.1.0"
authors = ["Daniel Lockyer <hi@daniellockyer.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3"
env_logger = "0.8"
lazy_static = "1.4"
log = "0.4"
redis = "0.20"
